@@ -1,3 +1,7 @@
+  25 Sep 2020; Manuel Friedli <manuel@gentoo.org> drone-1.9.1.ebuild,
+  files/drone.sh:
+  dev-util/drone: Handle all variables in config file generically.
+
 *drone-1.9.1 (25 Sep 2020)
 
   25 Sep 2020; Manuel Friedli <manuel@gentoo.org> +drone-1.9.1.ebuild,
